--- a/linkedinapply/config.yaml
+++ b/linkedinapply/config.yaml
@@ -1,6 +1,6 @@
 # Add your LinkedIn email ID and password. WARNING: KEEP THIS OFFLINE ON YOUR PC AND DO NOT COMMIT/UPLOAD.
 email: skbnisha89@gmail.com
-password: Applebees20!
+password: Icanttellyou
 
 # Anti-lock default is False to prevent your PC from sleeping to allow bot to run uninterrupted.
 # Set it to True if you wish to disable this functionality.
